@@ -29,3 +29,6 @@ codecompletion.prefs.table.spWithParams=SP with params
 codecompletion.prefs.table.spWithoutParams=SP without params
 codecompletion.prefs.table.udfWithParams=UDF with params
 codecompletion.prefs.table.udfWithoutParams=UDF without params
+
+CodeCompletionPreferencesPanel.maxLastSelectedCompletionNames=If you call code completion without being in the scope of a table/view, for which number of tables the parser last found would you like to see colums on top of the completion list?
+CodeCompletionPreferencesPanel.numberOfTables=number of tables
