@@ -6,6 +6,11 @@ Not yet released - available from CVS or in the latest snapshot:
 
 Enhancements:
 
+Code Completion:
+   The number of table columns that should be displayed on top of the completion list
+   when completion is called outside of the scope of a table/view is now configurable
+   in code completion properties.
+
 New Plugins for H2, PostgreSQL and DB2
 	These plugins provide source tabs for stored procedures, views and triggers.
 	They also provide details tab for sequences and triggers	
